Added youtube link

--- a/main.html
+++ b/main.html
@@ -7,6 +7,9 @@
 </head>
 
 <body>
+	<div>
+		<a href="https://www.youtube.com/watch?v=lmH5uqwaFq8">My current favourite song is Kids</a>
+	</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
